--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,4 +87,15 @@ body {
   background-color: #f9f9f9;
   min-height: 100vh;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+
+
+
+  border: solid 1px red
+}
+
+main {
+  padding-bottom: 30rem !important; /* space footer */
 }
